--- a/Formulario-Facultades/Ingenieria.html
+++ b/Formulario-Facultades/Ingenieria.html
@@ -1,118 +1,131 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
+    <title>Facultad de Ingenieria UNAH</title>
     <link rel="icon" href="img/logo.ico">
 
-    <title>Facultad de Ingenieria UNAH</title>
+    <link href="https://fonts.googleapis.com/css?family=K2D:200,400,700" rel="stylesheet">
 
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <!--Arvhicos CSS-->
+    <link rel="stylesheet" href="../Libreria/css/fontello.css">
+    <link rel="stylesheet" href="../Libreria/css/font-awesome.css">
+    <link rel="stylesheet" href="../Libreria/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../Libreria/css/bootstrap-complements.css">
+    <link rel="stylesheet" href="../Libreria/css/estilos.css">
 
     <!-- Custom styles for this template -->
     <link href="css/jumbotron.css" rel="stylesheet">
-  </head>
 
-  <body style="font-family: 'K2D', sans-serif;">
+    <!--Arvhicos JS-->
+    <script src="../Libreria/js/jquery-3.3.1.min.js"></script>
+    <script src="../Libreria/js/jquery.flexslider.js"></script>
+    <script src="../Libreria/js/main.js"></script>
+</head>
 
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-      <a class="navbar-brand" href="#" style = "font-size: 35px; font-weight: 600;">Facultad De Ingenieria</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+<body style="font-family: 'K2D', sans-serif;">
+    <!-- Header -->
+    <div id="incluir-header">
 
-      <div class="collapse navbar-collapse" id="navbarsExampleDefault" style="margin-left:20px;">
-        <ul class="navbar-nav mr-auto">
-            <form class="form-inline my-2 my-lg-0">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="button" onclick="location.href='Facult-page.html'">Pag Principal</button>
-            </form>
-      </div>
-    </nav>
+    </div>
 
+    <!-- Contenido -->
     <main role="main">
-
-      
-      <div class="jumbotron" style ="background-image: url(img/campus.jpg); background-repeat: no-repeat;  height: 600px;">
-        <div class="container">
-          <div class="row">
-              <h2 class="display-3" style="color:white;">Oferta Academica</h2>
-              <div class ="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xm-12" style="width: 300px; height: 345px; background-color: rgba(0,36,132,0.7);">
-                <img class ="center" src="img/ingenieria-mecanica.jpg" alt="" style="width:250px; margin-top: 10px; margin-left: auto;
+        <div class="jumbotron" style="background-image: url(img/campus.jpg); background-repeat: no-repeat;  height: 600px;">
+            <div class="container">
+                <div class="row">
+                    <h2 class="display-3" style="color:white;">Oferta Academica</h2>
+                    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xm-12" style="width: 300px; height: 345px; background-color: rgba(0,36,132,0.7);">
+                        <img class="center" src="img/ingenieria-mecanica.jpg" alt="" style="width:250px; margin-top: 10px; margin-left: auto;
                     margin-right: auto; display: block;">
-                
-                <h3 style="color:white;"><strong>Definicion de Ingenieria</strong></h3>
-                <p style="color:white; font-size:15px;">
-                    Se denomina con el nombre de ingeniería a aquella disciplina que se ocupa del estudio y de la aplicación de los conocimientos que de este y de la experiencia resultan, para que a través de diseños, técnicas y problemas puedan ser resueltos los diferentes problemas que afectan a la humanidad.
-                    ingeniería ostenta, la principal función de un ingeniero será la de promover y desarrollar soluciones tecnológicas para aquellas necesidades sociales, industriales y económicas que vayan suscitándose en la vida.
-                </p>
-              </div>
-          </div>
-        </div>
-      </div>
 
-      <div class="container">
-        <!-- Example row of columns -->
-        <div class="row">
-          <div class="col-md-4">
-            <h2>Ingenieria Civil</h2>
-            <img src="img/civil.jpg" alt="" style="width:230px; height:180px;">
-            <p><a class="btn btn-secondary" href="pdf/PLAN-DE-ESTUDIOS-INGENIERIA-CIVIL.pdf" target="_blank" role="button">Ver Plan de Estudios</a></p>
-          </div>
-          <div class="col-md-4">
-            <h2>Ingenieria En Sistemas</h2>
-            <img src="img/sistemas.jpg" alt="" style="width:230px; height:180px;">
-            <p><a class="btn btn-secondary" href="pdf/Plan-de-Estudios-Ingenieria-en-Sistemas.pdf" target="_blank" role="button">Ver Plan de Estudios</a></p>
-          </div>
-          <div class="col-md-4">
-            <h2>Ingenieria Electrica</h2>
-            <img src="img/electrica.jpg" alt="" style="width:230px; height:180px;">
-            <p><a class="btn btn-secondary" href="pdf/Plan-de-Estudios-Ingenieria-Electrica.pdf" target="_blank" role="button">Ver Plan de Estudios</a></p>
-          </div>
-          <div class="col-md-4">
-              <h2>Ingenieria Industrial</h2>
-              <img src="img/industrial.jpg" alt="" style="width:230px; height:180px;">
-              <p><a class="btn btn-secondary" href="pdf/Plan-de-Estudios-Ingenieria-Industrial.pdf" target="_blank" role="button">Ver Plan de Estudios</a></p>
-            </div>
-            <div class="col-md-4">
-              <h2>Ingenieria Mecanica</h2>
-              <img src="img/mecanica.jpg" alt="" style="width:230px; height:180px;">
-              <p><a class="btn btn-secondary" href="pdf/Plan-de-Estudios-Ingenieria-Mecanica-Industrial.pdf" target="_blank" role="button">Ver Plan de Estudios</a></p>
-            </div>
-            <div class="col-md-4">
-              <h2>Ingenieria Quimica</h2>
-              <img src="img/quimica.jpg" alt="" style="width:230px; height:180px;">
-              <p><a class="btn btn-secondary" href="pdf/PlanDeEstudiosIngenieriaQuimicaIndustrial.pdf" target="_blank" role="button">Ver Plan de Estudios</a></p>
-            </div>
-            <div class="col-md-4">
-              <h2>Ingenieria Forestal</h2>
-              <img src="img/forestal.jpg" alt="" style="width:230px; height:180px;">
-              <p><a class="btn btn-secondary" href="pdf/Plan-de-Estudios-Ingenieria-Forestal.pdf" target="_blank" role="button">Ver Plan de Estudios</a></p>
-            </div>
-            <div class="col-md-4">
-              <h2>ingenieria Agronomica</h2>
-              <img src="img/agronomica.jpg" alt="" style="width:230px; height:180px;">
-              <p><a class="btn btn-secondary" href="pdf/Plan-de-Estudios-Ingenieria-Agronomica.pdf" target="_blank" role="button">Ver Plan de Estudios</a></p>
+                        <h3 style="color:white;"><strong>Definicion de Ingenieria</strong></h3>
+                        <p style="color:white; font-size:15px;">
+                            Se denomina con el nombre de ingeniería a aquella disciplina que se ocupa del estudio y de
+                            la aplicación de los conocimientos que de este y de la experiencia resultan, para que a
+                            través de diseños, técnicas y problemas puedan ser resueltos los diferentes problemas que
+                            afectan a la humanidad.
+                            ingeniería ostenta, la principal función de un ingeniero será la de promover y desarrollar
+                            soluciones tecnológicas para aquellas necesidades sociales, industriales y económicas que
+                            vayan suscitándose en la vida.
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
 
-        <hr style="border:3px solid rgb(0,36,132);">
+        <div class="container">
+            <!-- Example row of columns -->
+            <div class="row">
+                <div class="col-md-4">
+                    <h2>Ingenieria Civil</h2>
+                    <img src="img/civil.jpg" alt="" style="width:230px; height:180px;">
+                    <p><a class="btn btn-secondary" href="pdf/PLAN-DE-ESTUDIOS-INGENIERIA-CIVIL.pdf" target="_blank"
+                            role="button">Ver Plan de Estudios</a></p>
+                </div>
+                <div class="col-md-4">
+                    <h2>Ingenieria En Sistemas</h2>
+                    <img src="img/sistemas.jpg" alt="" style="width:230px; height:180px;">
+                    <p><a class="btn btn-secondary" href="pdf/Plan-de-Estudios-Ingenieria-en-Sistemas.pdf" target="_blank"
+                            role="button">Ver Plan de Estudios</a></p>
+                </div>
+                <div class="col-md-4">
+                    <h2>Ingenieria Electrica</h2>
+                    <img src="img/electrica.jpg" alt="" style="width:230px; height:180px;">
+                    <p><a class="btn btn-secondary" href="pdf/Plan-de-Estudios-Ingenieria-Electrica.pdf" target="_blank"
+                            role="button">Ver Plan de Estudios</a></p>
+                </div>
+                <div class="col-md-4">
+                    <h2>Ingenieria Industrial</h2>
+                    <img src="img/industrial.jpg" alt="" style="width:230px; height:180px;">
+                    <p><a class="btn btn-secondary" href="pdf/Plan-de-Estudios-Ingenieria-Industrial.pdf" target="_blank"
+                            role="button">Ver Plan de Estudios</a></p>
+                </div>
+                <div class="col-md-4">
+                    <h2>Ingenieria Mecanica</h2>
+                    <img src="img/mecanica.jpg" alt="" style="width:230px; height:180px;">
+                    <p><a class="btn btn-secondary" href="pdf/Plan-de-Estudios-Ingenieria-Mecanica-Industrial.pdf"
+                            target="_blank" role="button">Ver Plan de Estudios</a></p>
+                </div>
+                <div class="col-md-4">
+                    <h2>Ingenieria Quimica</h2>
+                    <img src="img/quimica.jpg" alt="" style="width:230px; height:180px;">
+                    <p><a class="btn btn-secondary" href="pdf/PlanDeEstudiosIngenieriaQuimicaIndustrial.pdf" target="_blank"
+                            role="button">Ver Plan de Estudios</a></p>
+                </div>
+                <div class="col-md-4">
+                    <h2>Ingenieria Forestal</h2>
+                    <img src="img/forestal.jpg" alt="" style="width:230px; height:180px;">
+                    <p><a class="btn btn-secondary" href="pdf/Plan-de-Estudios-Ingenieria-Forestal.pdf" target="_blank"
+                            role="button">Ver Plan de Estudios</a></p>
+                </div>
+                <div class="col-md-4">
+                    <h2>ingenieria Agronomica</h2>
+                    <img src="img/agronomica.jpg" alt="" style="width:230px; height:180px;">
+                    <p><a class="btn btn-secondary" href="pdf/Plan-de-Estudios-Ingenieria-Agronomica.pdf" target="_blank"
+                            role="button">Ver Plan de Estudios</a></p>
+                </div>
+            </div>
 
-      </div> <!-- /container -->
+            <hr style="border:3px solid rgb(0,36,132);">
+
+        </div> <!-- /container -->
 
     </main>
 
-    <footer class="container-fluid" style="height:100px; background-color:rgb(0,36,132); color:white;">
-      <p style="font-size:28px; text-align: center;">Ingenieria en Sistemas, Clase Programacion Orientada A Objetos III-2018</p>
-    </footer>
+    <!-- Footer -->
+    <div id="incluir-footer">
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="js/jquery-3.3.1.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-
-
-  </body>
+    </div>
+  
+    <!--Arvhicos JavaScript-->
+    <script src="../Libreria/js/jquery-latest.js"></script>
+    <script src="../Libreria/js/bootstrap.min.js"></script>
+    <script src="../Libreria/header.js"></script>
+    <script src="../Libreria/footer.js"></script>
+</body>
 </html>
