Mismo Header y Footer para sistema pregrado

--- a/Formularios-Jefes-Departamento/Sign-in.html
+++ b/Formularios-Jefes-Departamento/Sign-in.html
@@ -1,47 +1,73 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="img/logo.ico">
 
-    <title>Inicio Seccion Jefes De Departamento</title>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="description" content="">
+	<meta name="author" content="">
+	<title>Inicio Seccion Jefes De Departamento</title>
+	<link rel="icon" href="img/logo.ico">
 
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=K2D:200,400,700" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="css/signin.css" rel="stylesheet">
-  </head>
+	<!--Arvhicos CSS-->
+	<link rel="stylesheet" href="../Libreria/css/fontello.css">
+	<link rel="stylesheet" href="../Libreria/css/font-awesome.css">
+	<link rel="stylesheet" href="../Libreria/css/bootstrap.min.css">
+	<link rel="stylesheet" href="../Libreria/css/bootstrap-complements.css">
+	<link rel="stylesheet" href="../Libreria/css/estilos.css">
+	<link rel="stylesheet" href="css/estilos.css">
 
-  <body class="text-center" style="background-image: url(img/wap.jpeg);">
+	<!--Arvhicos JS-->
+	<script src="../Libreria/js/jquery-3.3.1.min.js"></script>
+	<script src="../Libreria/js/jquery.flexslider.js"></script>
+	<script src="../Libreria/js/main.js"></script>
+</head>
 
-        <form class="form-signin">
-            <img class="mb-4 rounded-circle" src="img/Jefe.jpg" alt="" width="100" height="85">
-            <h1 class="h3 mb-3 font-weight-normal">Jefe De Departamento</h1>
-            <p class = "parrafo1">
-              Ingresa tu número de cuenta y clave
-            </p>
-            <label for="inputEmail" class="sr-only">Numero Cuenta</label>
-            <input type="email" id="inputEmail" class="form-control" placeholder="No Cuenta" required autofocus>
-            <label for="inputPassword" class="sr-only">Contraseña</label>
-            <input type="password" id="inputPassword" class="form-control" placeholder="Contraseña" required>
-            <div class="checkbox mb-3">
-              <label>
-                <input type="checkbox" value="remember-me"> Recordar Contraseña
-              </label>
-            </div>
-            <button class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Iniciar Sesion</button>
+<body class="text-center" style="background-image: url(img/wap.jpeg);">
+	<!-- Header -->
+	<div id="incluir-header">
 
-            <p class = "parrafo2">
-                    © Derechos Reservados UNAH 2018
-              Dirección Ejecutiva de Gestión de Tecnología (DEGT)
-            </p>
-            <!--p class="mt-5 mb-3 text-muted">&copy; 2017-2018</p-->
-          </form>
-    
-  </body>
+	</div>
+
+	<!-- Contenido -->
+	<div class="container loggin">
+		<form class="form-signin">
+			<img class="mb-4 rounded-circle" src="img/Jefe.jpg" alt="" width="100" height="85">
+			<h1 class="h3 mb-3 font-weight-normal">Jefe De Departamento</h1>
+			<p class="parrafo1">
+				Ingresa tu número de cuenta y clave
+			</p>
+			<label for="inputEmail" class="sr-only">Numero Cuenta</label>
+			<input type="email" id="inputEmail" class="form-control" placeholder="No Cuenta" required autofocus>
+			<label for="inputPassword" class="sr-only">Contraseña</label>
+			<input type="password" id="inputPassword" class="form-control" placeholder="Contraseña" required>
+			<div class="checkbox mb-3">
+				<label>
+					<input type="checkbox" value="remember-me"> Recordar Contraseña
+				</label>
+			</div>
+			<button class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Iniciar Sesion</button>
+	
+			<p class="parrafo2">
+				© Derechos Reservados UNAH 2018
+				Dirección Ejecutiva de Gestión de Tecnología (DEGT)
+			</p>
+			<!--p class="mt-5 mb-3 text-muted">&copy; 2017-2018</p-->
+		</form>
+	</div>
+
+    <!-- Footer -->
+    <div id="incluir-footer">
+
+    </div>
+  
+    <!--Arvhicos JavaScript-->
+    <script src="../Libreria/js/jquery-latest.js"></script>
+    <script src="../Libreria/js/bootstrap.min.js"></script>
+    <script src="../Libreria/header.js"></script>
+    <script src="../Libreria/footer.js"></script>
+</body>
 
 </html>
