--- a/Libreria/header.html
+++ b/Libreria/header.html
@@ -28,6 +28,8 @@
                                 Coordinadores</a>
                             <a class="dropdown-item" href="../Formularios-Jefes-Departamento/Sign-in.html">
                                 Jefes de Departamento</a>
+                            <a class="dropdown-item" href="../Formularios-Administracion/Sign-in.html">
+                                Administracion</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown">
