--- a/Formularios-Admnistracion/Pag-Administracion-General.html
+++ b/Formularios-Admnistracion/Pag-Administracion-General.html
@@ -101,7 +101,15 @@
                 <p style = "margin-top: 15px;"><a class="btn btn-secondary" href="#" role="button">Registro de Solicitudes</a></p>
             </div>
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12" style = "text-align:center;">
-                <h2>Despido de Peronal</h2>
+                <h2>Matricular Alumno</h2>
+                <img class="rounded-circle" src="../Libreria/img/estudiante.png" alt="Generic placeholder image" width="140" height="140">
+                <p>
+                    En esta seccion podra Matricular a un alumno de primer ingreso para que de esta manera empiece su nueva historia en la Universidad como pasante de X carrera.
+                </p>
+                <p style = "margin-top: 15px;"><a class="btn btn-secondary" href="#" role="button">Registro de Solicitudes</a></p>
+            </div>
+            <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12" style = "text-align:center;">
+                <h2>Despido de Personal</h2>
                 <img class="rounded-circle" src="../Libreria/img/despido.jpg" alt="Generic placeholder image" width="140" height="140">
                 <p>
                     En este apartado podra Eliminar una seccion correspondiente a una asignatura especifica que tenga algun inconveniente ya sea por que no se cumple con los requisitos o por orden de Administracion.
