--- a/Formularios-Admnistracion/Pag-Administracion-General.html
+++ b/Formularios-Admnistracion/Pag-Administracion-General.html
@@ -106,7 +106,7 @@
                 <p>
                     En esta seccion podra Matricular a un alumno de primer ingreso para que de esta manera empiece su nueva historia en la Universidad como pasante de X carrera.
                 </p>
-                <p style = "margin-top: 15px;"><a class="btn btn-secondary" href="#" role="button">Registro de Solicitudes</a></p>
+                <p style = "margin-top: 15px;"><a class="btn btn-secondary" href="#" role="button">Matricula Alumno</a></p>
             </div>
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12" style = "text-align:center;">
                 <h2>Despido de Personal</h2>
@@ -114,7 +114,15 @@
                 <p>
                     En este apartado podra Eliminar una seccion correspondiente a una asignatura especifica que tenga algun inconveniente ya sea por que no se cumple con los requisitos o por orden de Administracion.
                 </p>
-                <p style = "margin-top: 15px;"><a class="btn btn-secondary" href="#" role="button">Registro de Solicitudes</a></p>
+                <p style = "margin-top: 15px;"><a class="btn btn-secondary" href="#" role="button">Despedir Empleado</a></p>
+            </div>
+            <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12" style = "text-align:center;">
+                <h2>Cerrar Sesion</h2>
+                <img class="rounded-circle" src="../Libreria/img/cerrar-sesion.jpg" alt="Generic placeholder image" width="140" height="140">
+                <p>
+                    Cierra tu cuenta para no permitir que quede expuesta tu informacion y cambios realizados por ti.
+                </p>
+                <p style = "margin-top: 15px;"><a class="btn btn-secondary" href="#" role="button">Cerrar Sesion</a></p>
             </div>
           </div>
     </div>
