--- a/Formularios-Admnistracion/Sign-in.html
+++ b/Formularios-Admnistracion/Sign-in.html
@@ -1,3 +1,5 @@
+
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -33,7 +35,7 @@
                 <input type="checkbox" value="remember-me"> Recordar Contraseña
               </label>
             </div>
-            <button class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Iniciar Sesion</button>
+            <button class="btn btn-primary btn-lg active" role="button" aria-pressed="true" type="submit">Iniciar Sesion</button>
 
             <p class = "parrafo2">
                     © Derechos Reservados UNAH 2018
