--- a/Formularios-Alumnos/Pag-Alumnos.html
+++ b/Formularios-Alumnos/Pag-Alumnos.html
@@ -115,6 +115,14 @@
                     <p>Podras ver la programación académica del siguiente periodo</p>
                     <p><a class="btn btn-secondary" href="#" role="button">Programacion Academica</a></p>
             </div>
+            <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12" style = "text-align:center;">
+                <h2>Cerrar Sesion</h2>
+                <img class="rounded-circle" src="../Libreria/img/cerrar-sesion.jpg" alt="Generic placeholder image" width="140" height="140">
+                <p>
+                    Cierra tu cuenta para no permitir que quede expuesta tu informacion y cambios realizados por ti.
+                </p>
+                <p style = "margin-top: 15px;"><a class="btn btn-secondary" href="#" role="button">Cerrar Sesion</a></p>
+            </div>
           </div>
     </div>
 
