--- a/Formularios-Catedraticos/Pag-Catedraticos.html
+++ b/Formularios-Catedraticos/Pag-Catedraticos.html
@@ -86,6 +86,14 @@
               <p style = "margin-top: 20px;">Aqui puedes Registrar las Notas de Las Clases Impartidas</p>
               <p style = "margin-top: 57px;"><a class="btn btn-secondary" href="#" role="button">Registro de Notas</a></p>
             </div>
+            <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12" style = "text-align:center;">
+                <h2>Cerrar Sesion</h2>
+                <img class="rounded-circle" src="../Libreria/img/cerrar-sesion.jpg" alt="Generic placeholder image" width="140" height="140">
+                <p>
+                    Cierra tu cuenta para no permitir que quede expuesta tu informacion y cambios realizados por ti.
+                </p>
+                <p style = "margin-top: 15px;"><a class="btn btn-secondary" href="#" role="button">Cerrar Sesion</a></p>
+            </div>
           </div>
     </div>
 
