--- a/Formulario-Facultades/Facult-page.html
+++ b/Formulario-Facultades/Facult-page.html
@@ -59,14 +59,14 @@
     </style>
 
 </head>
-<body style = "background: url(img/wap.jpeg); font-family: 'K2D', sans-serif;"><!---->
+<body style = "font-family: 'K2D', sans-serif;"><!---->
     <!-- Header -->
     <div id="incluir-header">
 
     </div>
 
     <!-- Contenido -->
-    <div class="container portafolio">
+    <div style="background: url(img/wap.jpeg);"class="container portafolio">
         <div class = "row">
             <section class = "portafolio-item col-xl-3 col-lg-3 col-md-6  col-sm-12 portafolio-img">
                 <img src="img/ciencias.png" alt="" class = "portafolio-img">
