--- a/Formularios-Alumnos/Sign-in.html
+++ b/Formularios-Alumnos/Sign-in.html
@@ -8,6 +8,7 @@
 	<meta name="author" content="">
 	<title>Inicio Seccion Estudiantes</title>
 	<link rel="icon" href="img/logo.ico">
+	
 
     <link href="https://fonts.googleapis.com/css?family=K2D:200,400,700" rel="stylesheet" >
 
@@ -27,37 +28,39 @@
 	
 </head>
 
-<body class="text-center" style="background-image: url(img/libros.png);">
+<body class="text-center" >
 	<!-- Header -->
     <div id="incluir-header">
 
     </div>
 
-    <!-- Contenido -->
-	<div class="container loggin">
-		<form class="form-signin">
-			<img class="mb-4 rounded-circle" src="img/poli.jpg" alt="" width="85" height="85">
-			<h1 class="h3 mb-3 font-weight-normal">Estudiantes</h1>
-			<p class="parrafo1">
-				Ingresa tu número de cuenta y clave
-			</p>
-			<label for="inputEmail" class="sr-only">Numero Cuenta</label>
-			<input type="email" id="inputEmail" class="form-control" placeholder="No Cuenta" required autofocus>
-			<label for="inputPassword" class="sr-only">Contraseña</label>
-			<input type="password" id="inputPassword" class="form-control" placeholder="Contraseña" required>
-			<div class="checkbox mb-3">
-				<label>
-					<input type="checkbox" value="remember-me"> Recordar Contraseña
-				</label>
-			</div>
-			<button class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Iniciar Sesion</button>
-	
-			<p class="parrafo2">
-				© Derechos Reservados UNAH 2018
-				Dirección Ejecutiva de Gestión de Tecnología (DEGT)
-			</p>
-			<!--p class="mt-5 mb-3 text-muted">&copy; 2017-2018</p-->
-		</form>
+	<!-- Contenido -->
+		<div style="background-image: url(img/libros_felicidad.jpg);">
+		<div class="container loggin">
+			<form class="form-signin">
+				<img class="mb-4 rounded-circle" src="img/poli.jpg" alt="" width="85" height="85">
+				<h1 class="h3 mb-3 font-weight-normal">Estudiantes</h1>
+				<p class="parrafo1">
+					Ingresa tu número de cuenta y clave
+				</p>
+				<label for="inputEmail" class="sr-only">Numero Cuenta</label>
+				<input type="email" id="inputEmail" class="form-control" placeholder="No Cuenta" required autofocus>
+				<label for="inputPassword" class="sr-only">Contraseña</label>
+				<input type="password" id="inputPassword" class="form-control" placeholder="Contraseña" required>
+				<div class="checkbox mb-3">
+					<label>
+						<input type="checkbox" value="remember-me"> Recordar Contraseña
+					</label>
+				</div>
+				<button class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Iniciar Sesion</button>
+		
+				<p class="parrafo2">
+					© Derechos Reservados UNAH 2018
+					Dirección Ejecutiva de Gestión de Tecnología (DEGT)
+				</p>
+				<!--p class="mt-5 mb-3 text-muted">&copy; 2017-2018</p-->
+			</form>
+		</div>
 	</div>
 	
     <!-- Footer -->
