--- a/Formularios-Jefes-Departamento/Sign-in.html
+++ b/Formularios-Jefes-Departamento/Sign-in.html
@@ -25,37 +25,39 @@
 	<script src="../Libreria/js/main.js"></script>
 </head>
 
-<body class="text-center" style="background-image: url(img/wap.jpeg);">
+<body class="text-center">
 	<!-- Header -->
 	<div id="incluir-header">
 
 	</div>
 
 	<!-- Contenido -->
-	<div class="container loggin">
-		<form class="form-signin">
-			<img class="mb-4 rounded-circle" src="img/Jefe.jpg" alt="" width="100" height="85">
-			<h1 class="h3 mb-3 font-weight-normal">Jefe De Departamento</h1>
-			<p class="parrafo1">
-				Ingresa tu número de cuenta y clave
-			</p>
-			<label for="inputEmail" class="sr-only">Numero Cuenta</label>
-			<input type="email" id="inputEmail" class="form-control" placeholder="No Cuenta" required autofocus>
-			<label for="inputPassword" class="sr-only">Contraseña</label>
-			<input type="password" id="inputPassword" class="form-control" placeholder="Contraseña" required>
-			<div class="checkbox mb-3">
-				<label>
-					<input type="checkbox" value="remember-me"> Recordar Contraseña
-				</label>
-			</div>
-			<button class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Iniciar Sesion</button>
-	
-			<p class="parrafo2">
-				© Derechos Reservados UNAH 2018
-				Dirección Ejecutiva de Gestión de Tecnología (DEGT)
-			</p>
-			<!--p class="mt-5 mb-3 text-muted">&copy; 2017-2018</p-->
-		</form>
+	<div style="background-image: url(img/wap.jpeg);">
+		<div class="container loggin">
+			<form class="form-signin">
+				<img class="mb-4 rounded-circle" src="img/Jefe.jpg" alt="" width="100" height="85">
+				<h1 class="h3 mb-3 font-weight-normal">Jefe De Departamento</h1>
+				<p class="parrafo1">
+					Ingresa tu número de cuenta y clave
+				</p>
+				<label for="inputEmail" class="sr-only">Numero Cuenta</label>
+				<input type="email" id="inputEmail" class="form-control" placeholder="No Cuenta" required autofocus>
+				<label for="inputPassword" class="sr-only">Contraseña</label>
+				<input type="password" id="inputPassword" class="form-control" placeholder="Contraseña" required>
+				<div class="checkbox mb-3">
+					<label>
+						<input type="checkbox" value="remember-me"> Recordar Contraseña
+					</label>
+				</div>
+				<button class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Iniciar Sesion</button>
+		
+				<p class="parrafo2">
+					© Derechos Reservados UNAH 2018
+					Dirección Ejecutiva de Gestión de Tecnología (DEGT)
+				</p>
+				<!--p class="mt-5 mb-3 text-muted">&copy; 2017-2018</p-->
+			</form>
+		</div>
 	</div>
 
     <!-- Footer -->
