--- a/Libreria/header.html
+++ b/Libreria/header.html
@@ -1,7 +1,7 @@
 <!-- Header -->
 <div class="container-fluid">
         <nav class="navbar navbar-expand-lg navbar-fixed-top navbar-light bg-light">
-            <a class="navbar-brand" href="#">DIIP-UNAH</a>
+            <a class="navbar-brand" href="../Pag-Principal/index.html">DIIP-UNAH</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-1" aria-controls="navbar-1" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -90,7 +90,11 @@
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
                     <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit"style="color: white; background-color: transparent; border-color: rgb(0,36,132);" >Buscar</button>
+                    <style>
+                            .btn-outline-success{color: white; background-color: transparent; border-color: rgb(0,36,132);} .btn-outline-success:hover {color: #fff; background-color: rgb(0,36,132); border-color:rgb(0,36,132);}
+                    </style>
+
                 </form>
             </div>
         </nav>
