--- a/Formularios-Administracion/Administracion.html
+++ b/Formularios-Administracion/Administracion.html
@@ -6,10 +6,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="description" content="">
 	<meta name="author" content="">
-  <title>Administracion-UNAH</title>
-			<link rel="stylesheet" href="css/style.css">
-			<link rel="icon" href="img/logo.ico">
-			<link href="css/bootstrap.min.css" rel="stylesheet">
+  	<title>Administracion-UNAH</title>
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="icon" href="../img/logo.ico">
+	<link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
