Proceso de incicio de sesio de catedratico y mostrar datos en div de dicho docente

--- a/Libreria/footer.html
+++ b/Libreria/footer.html
@@ -1,12 +1,12 @@
 <!-- Footer -->
-<footer class="page-footer font-small unique-color-dark">
-        <div style="background-color: #6351ce;">
+<footer class="page-footer font-small unique-color-dark" ><!--color:white; style="background-color:#282828;"-->
+        <div style="background-color: rgb(0,36,132);">
             <div class="container">
                 <div class="row py-4 d-flex align-items-center">
                     <div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
-                        <h6 class="mb-0">Universidad Nacional Autónoma de Honduras</h6>
+                        <h6 class="mb-0" style="color:#fff;">Universidad Nacional Autónoma de Honduras</h6>
                     </div>
-                    <div class="col-md-6 col-lg-7 text-center text-md-right social-icon">
+                    <div class="col-md-6 col-lg-7 text-center text-md-right social-icon" style="color:white;">
                         <!-- Facebook -->
                         <a rel="nofollow" target="_blank" id="" href="https://www.facebook.com/unahoficial">
                             <i class="fa fa-facebook white-text mr-4 mr-4"> </i>
