--- a/Formularios-Administracion/Administracion.html
+++ b/Formularios-Administracion/Administracion.html
@@ -8,7 +8,7 @@
 	<meta name="author" content="">
   	<title>Administracion-UNAH</title>
 	<link rel="stylesheet" href="css/style.css">
-	<link rel="icon" href="../img/logo.ico">
+	<link rel="icon" href="img/logo.ico">
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
 
