--- a/Formularios-Catedraticos/Sign-in.html
+++ b/Formularios-Catedraticos/Sign-in.html
@@ -5,9 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="description" content="">
 	<meta name="author" content="">
-	<title>Inicio Seccion Catedraticos</title>
+	<title>Inicio Sesion Catedraticos</title>
 	<link rel="icon" href="img/logo.ico">
-
 	<link href="https://fonts.googleapis.com/css?family=K2D:200,400,700" rel="stylesheet">
 
 	<!--Arvhicos CSS-->
@@ -17,6 +16,7 @@
 	<link rel="stylesheet" href="../Libreria/css/bootstrap-complements.css">
 	<link rel="stylesheet" href="../Libreria/css/estilos.css">
 	<link rel="stylesheet" href="css/estilos.css">
+	
 
 	<!--Arvhicos JS-->
 	<script src="../Libreria/js/jquery-3.3.1.min.js"></script>
@@ -39,16 +39,16 @@
 				<p class="parrafo1">
 					Ingresa tu número de cuenta y clave
 				</p>
-				<label for="inputEmail" class="sr-only">Numero Cuenta</label>
-				<input type="email" id="inputEmail" class="form-control" placeholder="No Cuenta" required autofocus>
+				<label for="inputEmail" class="sr-only" >Numero Cuenta</label>
+				<input type="email" class="form-control"id="No_Cuenta"placeholder="--------------No Cuenta--------------">
 				<label for="inputPassword" class="sr-only">Contraseña</label>
-				<input type="password" id="inputPassword" class="form-control" placeholder="Contraseña" required>
+				<input type="password" class="form-control"  id="password" placeholder="-------------Contraseña--------------">
 				<div class="checkbox mb-3">
 					<label>
 						<input type="checkbox" value="remember-me"> Recordar Contraseña
 					</label>
 				</div>
-				<button class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Iniciar Sesion</button>
+				<button class="btn btn-primary btn-lg active" role="button" aria-pressed="true" type="button" id="btn-login">Iniciar Sesion</button>
 		
 				<p class="parrafo2">
 					© Derechos Reservados UNAH 2018
@@ -67,7 +67,8 @@
     <script src="../Libreria/js/jquery-latest.js"></script>
     <script src="../Libreria/js/bootstrap.min.js"></script>
     <script src="../Libreria/header.js"></script>
-    <script src="../Libreria/footer.js"></script>
+	<script src="../Libreria/footer.js"></script>
+	<script src="js/sign-in.js"></script>
 </body>
 
 </html>
