Ingreso de Docentes Completo

--- a/Formularios-Catedraticos/Sign-in.html
+++ b/Formularios-Catedraticos/Sign-in.html
@@ -40,9 +40,9 @@
 					Ingresa tu número de cuenta y clave
 				</p>
 				<label for="inputEmail" class="sr-only" >Numero Cuenta</label>
-				<input type="email" class="form-control"id="No_Cuenta"placeholder="--------------No Cuenta--------------">
+				<input type="email" class="form-control" style="text-align: center;" id="No_Cuenta"placeholder="--------------No Cuenta--------------">
 				<label for="inputPassword" class="sr-only">Contraseña</label>
-				<input type="password" class="form-control"  id="password" placeholder="-------------Contraseña--------------">
+				<input type="password" class="form-control" style="text-align: center;"   id="password" placeholder="-------------Contraseña--------------">
 				<div class="checkbox mb-3">
 					<label>
 						<input type="checkbox" value="remember-me"> Recordar Contraseña
