Ingreso de coordinadores Completado

--- a/Formularios-Coordinadores/Sign-in.html
+++ b/Formularios-Coordinadores/Sign-in.html
@@ -39,16 +39,16 @@
 				<p class="parrafo1">
 					Ingresa tu número de cuenta y clave
 				</p>
-				<label for="inputEmail" class="sr-only">Numero Cuenta</label>
-				<input type="email" id="inputEmail" class="form-control" placeholder="No Cuenta" required autofocus>
-				<label for="inputPassword" class="sr-only">Contraseña</label>
-				<input type="password" id="inputPassword" class="form-control" placeholder="Contraseña" required>
+				<label for="No_Cuenta" class="sr-only">Numero Cuenta</label>
+				<input type="email" id="No_Cuenta" class="form-control" style="text-align: center;" placeholder="--------------No Cuenta--------------">
+				<label for="password" class="sr-only">Contraseña</label>
+				<input type="password" id="password" class="form-control" style="text-align: center;" placeholder="-------------Contraseña--------------" >
 				<div class="checkbox mb-3">
 					<label>
 						<input type="checkbox" value="remember-me"> Recordar Contraseña
 					</label>
 				</div>
-				<button class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Iniciar Sesion</button>
+				<button class="btn btn-primary btn-lg active" role="button" id="btn-login" type="button" aria-pressed="true">Iniciar Sesion</button>
 		
 				<p class="parrafo2">
 					© Derechos Reservados UNAH 2018
@@ -68,5 +68,6 @@
 		<script src="../Libreria/js/bootstrap.min.js"></script>
 		<script src="../Libreria/header.js"></script>
 		<script src="../Libreria/footer.js"></script>
+		<script src="js/sign-in.js"></script>
 </body>
 </html>
