Actualizacion de Emergencia

--- a/Formularios-Coordinadores/Sign-in.html
+++ b/Formularios-Coordinadores/Sign-in.html
@@ -40,7 +40,7 @@
 					Ingresa tu número de cuenta y clave
 				</p>
 				<label for="No_Cuenta" class="sr-only">Numero Cuenta</label>
-				<input type="email" id="No_Cuenta" class="form-control" style="text-align: center;" placeholder="--------------No Cuenta--------------">
+				<input type="text" id="No_Cuenta" class="form-control" style="text-align: center;" placeholder="--------------No Cuenta--------------">
 				<label for="password" class="sr-only">Contraseña</label>
 				<input type="password" id="password" class="form-control" style="text-align: center;" placeholder="-------------Contraseña--------------" >
 				<div class="checkbox mb-3">
