--- a/Formularios-Jefes-Departamento/Sign-in.html
+++ b/Formularios-Jefes-Departamento/Sign-in.html
@@ -41,15 +41,15 @@
 					Ingresa tu número de cuenta y clave
 				</p>
 				<label for="inputEmail" class="sr-only">Numero Cuenta</label>
-				<input type="email" id="inputEmail" class="form-control" placeholder="No Cuenta" required autofocus>
+				<input style="text-align:center;" type="text" id="No_Cuenta" class="form-control" placeholder="--------------No Cuenta-------------">
 				<label for="inputPassword" class="sr-only">Contraseña</label>
-				<input type="password" id="inputPassword" class="form-control" placeholder="Contraseña" required>
+				<input style="text-align:center;" type="password" id="password" class="form-control" placeholder="--------------Contraseña--------------">
 				<div class="checkbox mb-3">
 					<label>
 						<input type="checkbox" value="remember-me"> Recordar Contraseña
 					</label>
 				</div>
-				<button class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Iniciar Sesion</button>
+				<button class="btn btn-primary btn-lg active" type="button" id="btn-login" aria-pressed="true">Iniciar Sesion</button>
 		
 				<p class="parrafo2">
 					© Derechos Reservados UNAH 2018
@@ -65,11 +65,13 @@
 
     </div>
   
-    <!--Arvhicos JavaScript-->
+	<!--Arvhicos JavaScript-->
+	<script src="js/sign-in.js"></script>
     <script src="../Libreria/js/jquery-latest.js"></script>
     <script src="../Libreria/js/bootstrap.min.js"></script>
     <script src="../Libreria/header.js"></script>
-    <script src="../Libreria/footer.js"></script>
+	<script src="../Libreria/footer.js"></script>
+
 </body>
 
 </html>
