Boton regresar en sign in admon

--- a/Formularios-Administracion/Administracion.html
+++ b/Formularios-Administracion/Administracion.html
@@ -10,10 +10,16 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="icon" href="img/logo.ico">
 	<link href="css/bootstrap.min.css" rel="stylesheet">
+
+
+	<!--Arvhicos CSS-->
+
 </head>
 
 <body>
-  <div class="wrapper">
+
+		
+  	<div class="wrapper">
 	<div class="container">
 		<h1 style="color:white; font-weight:600; ">Administrador-UNAH</h1>
         
@@ -24,6 +30,7 @@
 			<input id="usuario" placeholder="Usuario" style="font-weight:600;">
 			<input id="password" type="password" placeholder="Contraseña" style="font-weight:600;">
 			<button type="button" id="btn-login">Login</button>
+			<button type="button" id="btn-login" onclick="location.href='../Pag-Principal/index.html'">Regresar</button>
 			<div id="notificacion">
 			</div>
 		</form>
@@ -44,6 +51,11 @@
 	</ul>
 </div>
   <script src="../Libreria/js/jquery-3.3.1.min.js"></script>
-    <script src="js/administracion.js"></script>
+	<script src="js/administracion.js"></script>
+	<!-- Footer -->
+ 
+  
+    <!--Arvhicos JavaScript-->
+
 </body>
 </html>
