--- a/Formularios-Administracion/Administracion.html
+++ b/Formularios-Administracion/Administracion.html
@@ -12,6 +12,7 @@
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 
 
+
 	<!--Arvhicos CSS-->
 
 </head>
@@ -52,6 +53,8 @@
 </div>
   <script src="../Libreria/js/jquery-3.3.1.min.js"></script>
 	<script src="js/administracion.js"></script>
+
+	</script>
 	<!-- Footer -->
  
   
